set up first baseline scenario of UC5 in flow

--- a/tutorials/tutorial11_traffic_lights.ipynb
+++ b/tutorials/tutorial11_traffic_lights.ipynb
@@ -153,7 +153,8 @@
     "additional_net_params = {\"grid_array\": grid_array, \"speed_limit\": 35,\n",
     "                         \"horizontal_lanes\": 1, \"vertical_lanes\": 1,\n",
     "                         \"traffic_lights\": True}\n",
-    "net_params = NetParams(additional_params=additional_net_params)\n",
+    "net_params = NetParams(no_internal_links=False,\n",
+    "                       additional_params=additional_net_params)\n",
     "\n",
     "scenario = SimpleGridScenario(name=\"grid\",\n",
     "                              vehicles=VehicleParams(),\n",
