--- a/tutorials/tutorial07_osm.ipynb
+++ b/tutorials/tutorial07_osm.ipynb
@@ -69,7 +69,8 @@
    "outputs": [],
    "source": [
     "net_params = NetParams(\n",
-    "    osm_path='networks/bay_bridge.osm'\n",
+    "    osm_path='networks/bay_bridge.osm',\n",
+    "    no_internal_links=False\n",
     ")"
    ]
   },
@@ -77,6 +78,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note that in the above cell the `no_internal_links` attribute is set to False to generate junctions for the network within SUMO. This has no effect in Aimsun, and can be left out.\n",
+    "\n",
     "Next, we create all other parameters as we have in tutorials 1 and 2. For this example, we will assume a total of 1000 are uniformly spread across the Bay Bridge. Once again, if the choice of parameters is unclear, you are encouraged to review Tutorial 1."
    ]
   },
